name:                functional-mazes
version:             0.1.0.0
synopsis:            Maze generation
description:         Generate mazes of different shapes, sizes and complexities
homepage:            https://github.com/julius383/functional-mazes#readme
license:             MIT
license-file:        LICENSE
author:              Julius Kibunjis
maintainer:          kibunjiajulius@gmail.com
copyright:           2019 Julius Kibunjis
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fmaze
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       fgl, diagrams, lens, fgl-visualize
